add fucntions work

--- a/index.html
+++ b/index.html
@@ -7,32 +7,29 @@
     <title>Template</title>
     <meta
       name="description"
-      content="Welcome to Augwell Technologies, a leading software solutions agency. We empower businesses with seamless software solutions. Partner with us to transform your business through cutting-edge technology."
+      content="Welcome to Sneakz, a leading software solutions agency. We empower businesses with seamless software solutions. Partner with us to transform your business through cutting-edge technology."
     />
 
     <meta
       name="keywords"
-      content="Augwell Technologies is a top-tier software solutions agency offering website development, SEO, mobile app development, and more to empower your business."
+      content="Sneakz is a top-tier software solutions agency offering website development, SEO, mobile app development, and more to empower your business."
     />
 
-    <meta name="author" content="Augwell Technologies" />
+    <meta name="author" content="Sneakz" />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="Augwell Technologies | Your Trusted Software Solutions Partner"
+      content="Sneakz | Your Trusted Software Solutions Partner"
     />
     <meta
       property="og:description"
-      content="Explore top-notch services from Augwell Technologies including website development, SEO, mobile apps, and more. Drive your business growth with us."
+      content="Explore top-notch services from Sneakz including website development, SEO, mobile apps, and more. Drive your business growth with us."
     />
     <meta property="og:image" content="/icons/augwell_logo.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Augwell Technologies | Software Solutions Agency"
-    />
+    <meta name="twitter:title" content="Sneakz | Software Solutions Agency" />
     <meta
       name="twitter:description"
       content="Custom software solutions for your business growth. Website development, mobile apps, SEO, e-commerce, and more."
@@ -46,7 +43,7 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Augwell Technologies",
+        "name": "Sneakz",
         "url": "https://yourwebsite.com",
         "logo": "https://yourwebsite.com/icons/augwell_logo.png",
         "sameAs": [
@@ -54,7 +51,7 @@
           "https://www.twitter.com/yourprofile",
           "https://www.linkedin.com/in/yourprofile"
         ],
-        "description": "Augwell Technologies provides expert software solutions, including website development, mobile app development, and e-commerce services.",
+        "description": "Sneakz provides expert software solutions, including website development, mobile app development, and e-commerce services.",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+1-800-555-5555",
@@ -64,11 +61,11 @@
     </script>
 
     <script>
-      document.addEventListener("visibilitychange", function () {
+      document.addEventListener('visibilitychange', function () {
         if (document.hidden) {
           document.title = "👀 Wait! you're missing out!";
         } else {
-          document.title = "😊 Welcome back, we missed you!";
+          document.title = '😊 Welcome back, we missed you!';
         }
       });
     </script>
