--- a/index.html
+++ b/index.html
@@ -2,38 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons/augwell_logo_icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/icons/sneakz.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template</title>
-    <meta
-      name="description"
-      content="Welcome to Sneakz, a leading software solutions agency. We empower businesses with seamless software solutions. Partner with us to transform your business through cutting-edge technology."
-    />
+    <title>Sneakz</title>
+    <meta name="description" content="Welcome to Sneakz,..." />
 
-    <meta
-      name="keywords"
-      content="Sneakz is a top-tier software solutions agency offering website development, SEO, mobile app development, and more to empower your business."
-    />
+    <meta name="keywords" content="Sneakz is a..." />
 
     <meta name="author" content="Sneakz" />
     <meta name="robots" content="index, follow" />
-    <meta
-      property="og:title"
-      content="Sneakz | Your Trusted Software Solutions Partner"
-    />
-    <meta
-      property="og:description"
-      content="Explore top-notch services from Sneakz including website development, SEO, mobile apps, and more. Drive your business growth with us."
-    />
-    <meta property="og:image" content="/icons/augwell_logo.png" />
+    <meta property="og:title" content="Sneakz | Ecommerce Company" />
+    <meta property="og:description" content="Ecommerce Company..." />
+    <meta property="og:image" content="/icons/sneakz.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sneakz | Software Solutions Agency" />
-    <meta
-      name="twitter:description"
-      content="Custom software solutions for your business growth. Website development, mobile apps, SEO, e-commerce, and more."
-    />
+    <meta name="twitter:title" content="Sneakz | Ecommerce Company" />
+    <meta name="twitter:description" content="Ecommerce Company..." />
   </head>
   <body>
     <div id="root"></div>
@@ -45,13 +30,13 @@
         "@type": "Organization",
         "name": "Sneakz",
         "url": "https://yourwebsite.com",
-        "logo": "https://yourwebsite.com/icons/augwell_logo.png",
+        "logo": "https://yourwebsite.com/icons/sneakz.png",
         "sameAs": [
           "https://www.facebook.com/yourpage",
           "https://www.twitter.com/yourprofile",
           "https://www.linkedin.com/in/yourprofile"
         ],
-        "description": "Sneakz provides expert software solutions, including website development, mobile app development, and e-commerce services.",
+        "description": "Ecommerce Company...",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+1-800-555-5555",
