--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons/sneakz.png" />
+    <link rel="icon" type="image/svg+xml" href="./icons/logo_1_no_bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sneakz</title>
     <meta name="description" content="Welcome to Sneakz,..." />
@@ -13,7 +13,7 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Sneakz | Ecommerce Company" />
     <meta property="og:description" content="Ecommerce Company..." />
-    <meta property="og:image" content="/icons/sneakz.png" />
+    <meta property="og:image" content="./icons/logo_1_no_bg.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
         "@type": "Organization",
         "name": "Sneakz",
         "url": "https://yourwebsite.com",
-        "logo": "https://yourwebsite.com/icons/sneakz.png",
+        "logo": "https://yourwebsite.com./icons/logo_1_no_bg.png",
         "sameAs": [
           "https://www.facebook.com/yourpage",
           "https://www.twitter.com/yourprofile",
@@ -39,7 +39,7 @@
         "description": "Ecommerce Company...",
         "contactPoint": {
           "@type": "ContactPoint",
-          "telephone": "+1-800-555-5555",
+          "telephone": "+233-558-61-9235",
           "contactType": "Customer Service"
         }
       }
