--- a/index.html
+++ b/index.html
@@ -2,57 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./icons/logo_1_no_bg.png" />
+    <link rel="icon" type="image/svg+xml" href="./icons/sash-king.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sneakz</title>
-    <meta name="description" content="Welcome to Sneakz,..." />
+    <title>Sash King</title>
+    <meta name="description" content="Welcome to Sash King,..." />
 
-    <meta name="keywords" content="Sneakz is a..." />
+    <meta name="keywords" content="Sash King is a..." />
 
-    <meta name="author" content="Sneakz" />
+    <meta name="author" content="Sash King" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Sneakz | Ecommerce Company" />
+    <meta property="og:title" content="Sash King | Ecommerce Company" />
     <meta property="og:description" content="Ecommerce Company..." />
-    <meta property="og:image" content="./icons/logo_1_no_bg.png" />
+    <meta property="og:image" content="./icons/sash-king.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Sneakz | Ecommerce Company" />
+    <meta name="twitter:title" content="Sash King | Ecommerce Company" />
     <meta name="twitter:description" content="Ecommerce Company..." />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Sneakz",
-        "url": "https://yourwebsite.com",
-        "logo": "https://yourwebsite.com./icons/logo_1_no_bg.png",
-        "sameAs": [
-          "https://www.facebook.com/yourpage",
-          "https://www.twitter.com/yourprofile",
-          "https://www.linkedin.com/in/yourprofile"
-        ],
-        "description": "Ecommerce Company...",
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+233-558-61-9235",
-          "contactType": "Customer Service"
-        }
-      }
-    </script>
-
-    <script>
-      document.addEventListener('visibilitychange', function () {
-        if (document.hidden) {
-          document.title = "👀 Wait! you're missing out!";
-        } else {
-          document.title = '😊 Welcome back, we missed you!';
-        }
-      });
-    </script>
   </body>
 </html>
