--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
-      ,
       maximum-scale="1"
     />
     <title>Sash King</title>
@@ -19,7 +18,7 @@
     <meta property="og:title" content="Sash King | Ecommerce Company" />
     <meta property="og:description" content="Ecommerce Company..." />
     <meta property="og:image" content="./icons/sash-king.png" />
-    <meta property="og:url" content="https://yourwebsite.com" />
+    <!-- <meta property="og:url" content="https://yourwebsite.com" /> -->
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sash King | Ecommerce Company" />
