--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./icons/sash-king.png" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
-      maximum-scale="1"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     />
     <title>Sash King</title>
     <meta name="description" content="Welcome to Sash King,..." />
